# dermaseg

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
data/: README.md
notebooks/: train_colab.ipynb
scripts/: download_data.py  evaluate.py  export_onnx.py  train.py
src/: __init__.py  config.py  metrics.py
src/app/: __init__.py  inference.py  main.py
src/data/: __init__.py  dataset.py
src/model/: __init__.py  segformer.py
tests/: test_api.py  test_inference.py
