[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dermaseg"
version = "0.1.0"
description = "Skin-lesion segmentation (SegFormer) served as a Dockerized FastAPI app on Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
# Runtime deps intentionally live in requirements.txt (slim) and
# requirements-train.txt (heavy), per the two-environment design. This block is
# only dev tooling so `pip install -e ".[dev]"` works.

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "httpx>=0.27",   # FastAPI TestClient transport
]

# Make `src` importable (e.g. `uvicorn src.app.main:app`) when installed editable.
[tool.setuptools]
packages = ["src", "src.data", "src.model", "src.app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]   # long lines the formatter can't wrap (e.g. URLs)

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # so tests import `src.*` without an editable install
addopts = "-q"
